@@ -1,5 +1,8 @@
 [b]Version 0.5.62[/b] (not released yet):
 
+(2007-10-13)
+ * Updated the Ukrainian translation.
+
 (2007-10-10)
  * Updated the Slovak translation.
 
